Add SVG logo's.

--- a/index.html
+++ b/index.html
@@ -7,36 +7,46 @@ changefreq: weekly
 priority: 1.0
 ---
 
-<header>
+<header class="">
   {% include nav.html %}
-  
-  <h1 class="page-head__text">Vinci brengt de woningmarkt in beweging</h1>
+  <section class="l-container">
+    <img class="" src="img/vinci-logos.svg#koopgarantfonds" width="500" height="160" />
+
+
+    <img class="" src="img/vinci-logos.svg#woningfonds" width="500" height="160" />
+
+
+    <h1 class="page-head__text">Vinci brengt de woningmarkt in beweging</h1>
+  </section>
 </header>
 
-<main>
-  <article class="col-sm-4 main-homepage-funds-left">
-  <h3 class="sr-only">Stichting Huisvesting Middengroepen</h3>
-  <a class="main-homepage-funds-logo" href="{{site.baseurl}}/stichting-huisvesting-middengroepen/"></a>
-  <p>
-    Stichting Huisvesting Middengroepen is de woningstichting die beoogt heel Nederland te voorzien van voldoende en goede huurwoningen t.b.v. de middengroepen. Zij biedt een volkshuisvestelijk geborgde oplossing voor het marktsegment waar corporaties zich uit willen of moeten terugtrekken.
-  </p>
-  <a class="btn purple" href="{{site.baseurl}}/stichting-huisvesting-middengroep/">Lees verder</a>
-</article>
-<article class="col-sm-4 main-homepage-funds-middle">
-  <h3 class="sr-only">Vinci Woningfonds</h3>
-  <a class="main-homepage-funds-logo" href="{{site.baseurl}}/woningfonds/"></a>
-  <p>
-    Vinci Woningfonds is de uitvoeringsorganisatie van de stichting huisvesting middengroepen. Door gebruik te maken van een bekende en bewezen fondsstructuur wordt verbinding gemaakt met de private markt.
-  </p>
-  <a class="btn orange" href="{{site.baseurl}}/woningfonds/">Lees verder</a>
-</article>
+<main class="">
+  <section class="l-container">
+    <article class="">
+      <h3 class="sr-only">Stichting Huisvesting Middengroepen</h3>
+      <a class="" href="{{site.baseurl}}/stichting-huisvesting-middengroepen/">Stichting Logo</a>
+      <p>
+        Stichting Huisvesting Middengroepen is de woningstichting die beoogt heel Nederland te voorzien van voldoende en goede huurwoningen t.b.v. de middengroepen. Zij biedt een volkshuisvestelijk geborgde oplossing voor het marktsegment waar corporaties zich uit willen of moeten terugtrekken.
+      </p>
+      <a class="btn btn--purple" href="{{site.baseurl}}/stichting-huisvesting-middengroep/">Lees verder</a>
+    </article>
 
-<article class="col-sm-4 main-homepage-funds-right">
-  <h3 class="sr-only">Vinci Koopgarantfonds</h3>
-  <a class="main-homepage-funds-logo" href="{{site.baseurl}}/koopgarantfonds/"></a>
-  <p>
-    Vinci Koopgarantfonds biedt corporaties de mogelijkheid hun koopgarant positie op aantrekkelijke wijze te herstructureren of af te stoten.
-  </p>
-  <a class="btn orange" href="{{site.baseurl}}/koopgarantfonds/">Lees verder</a>
-</article>
+    <article class="">
+      <h3 class="sr-only">Vinci Woningfonds</h3>
+      <a class="" href="{{site.baseurl}}/woningfonds/">Woningfonds Logo</a>
+      <p>
+        Vinci Woningfonds is de uitvoeringsorganisatie van de stichting huisvesting middengroepen. Door gebruik te maken van een bekende en bewezen fondsstructuur wordt verbinding gemaakt met de private markt.
+      </p>
+      <a class="btn btn--orange" href="{{site.baseurl}}/woningfonds/">Lees verder</a>
+    </article>
+
+    <article class="">
+      <h3 class="sr-only">Vinci Koopgarantfonds</h3>
+      <a class="" href="{{site.baseurl}}/koopgarantfonds/">Koopgarantfonds</a>
+      <p>
+        Vinci Koopgarantfonds biedt corporaties de mogelijkheid hun koopgarant positie op aantrekkelijke wijze te herstructureren of af te stoten.
+      </p>
+      <a class="btn btn--orange" href="{{site.baseurl}}/koopgarantfonds/">Lees verder</a>
+    </article>
+  </section>
 </main>
