--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ priority: 1.0
 <header class="">
   {% include nav.html %}
   <section class="l-container">
-    <img class="" src="img/vinci-logos.svg#koopgarantfonds" width="500" height="160" />
+    <img class="" src="img/vinci-logos.svg#stichting" width="250" height="80" />
 
 
-    <img class="" src="img/vinci-logos.svg#woningfonds" width="500" height="160" />
+    <img class="" src="img/vinci-logos.svg#woningfonds" width="250" height="80" />
 
 
     <h1 class="page-head__text">Vinci brengt de woningmarkt in beweging</h1>
@@ -24,7 +24,9 @@ priority: 1.0
   <section class="l-container">
     <article class="">
       <h3 class="sr-only">Stichting Huisvesting Middengroepen</h3>
-      <a class="" href="{{site.baseurl}}/stichting-huisvesting-middengroepen/">Stichting Logo</a>
+      <a class="" href="{{site.baseurl}}/stichting-huisvesting-middengroepen/">
+        <img class="" src="img/vinci-logos.svg#stichting" width="250" height="80" />
+      </a>
       <p>
         Stichting Huisvesting Middengroepen is de woningstichting die beoogt heel Nederland te voorzien van voldoende en goede huurwoningen t.b.v. de middengroepen. Zij biedt een volkshuisvestelijk geborgde oplossing voor het marktsegment waar corporaties zich uit willen of moeten terugtrekken.
       </p>
@@ -33,7 +35,9 @@ priority: 1.0
 
     <article class="">
       <h3 class="sr-only">Vinci Woningfonds</h3>
-      <a class="" href="{{site.baseurl}}/woningfonds/">Woningfonds Logo</a>
+      <a class="" href="{{site.baseurl}}/woningfonds/">
+        <img class="" src="img/vinci-logos.svg#woningfonds" width="250" height="80" />
+      </a>
       <p>
         Vinci Woningfonds is de uitvoeringsorganisatie van de stichting huisvesting middengroepen. Door gebruik te maken van een bekende en bewezen fondsstructuur wordt verbinding gemaakt met de private markt.
       </p>
@@ -42,7 +46,9 @@ priority: 1.0
 
     <article class="">
       <h3 class="sr-only">Vinci Koopgarantfonds</h3>
-      <a class="" href="{{site.baseurl}}/koopgarantfonds/">Koopgarantfonds</a>
+      <a class="" href="{{site.baseurl}}/koopgarantfonds/">
+        <img class="" src="img/vinci-logos.svg#koopgarantfonds" width="250" height="80" />
+      </a>
       <p>
         Vinci Koopgarantfonds biedt corporaties de mogelijkheid hun koopgarant positie op aantrekkelijke wijze te herstructureren of af te stoten.
       </p>
