Update src files.

--- a/data-example.html
+++ b/data-example.html
@@ -9,7 +9,7 @@ priority: 0.8
 
 <section>
 	{% for item in site.data.data-example %}
-		<article>
+		<article class="test">
 			<h2>{{ item.title }}</h2>
 			{% if item.subtitle %}
 			<p><strong>{{ item.subtitle }}</strong></p>
