Update SVg sprite fix for Safari.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ priority: 1.0
 <header class="">
   {% include nav.html %}
   <section class="l-container">
-    <img class="" src="img/vinci-logos.svg#stichting" width="250" height="80" />
+    <iframe class="" src="img/vinci-logos.svg#stichting" width="250" height="80"></iframe>
 
 
-    <img class="" src="img/vinci-logos.svg#woningfonds" width="250" height="80" />
+    <iframe class="" src="img/vinci-logos.svg#woningfonds" width="250" height="80"></iframe>
 
 
     <h1 class="page-head__text">Vinci brengt de woningmarkt in beweging</h1>
