Update SVG fix for Safari (iframe).

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ priority: 1.0
 <header class="">
   {% include nav.html %}
   <section class="l-container">
-    <iframe class="" src="img/vinci-logos.svg#stichting" width="250" height="80"></iframe>
+    <iframe class="" src="{{ site.baseurl }}/img/vinci-logos.svg#stichting" width="250" height="80"></iframe>
 
 
-    <iframe class="" src="img/vinci-logos.svg#woningfonds" width="250" height="80"></iframe>
+    <iframe class="" src="{{ site.baseurl }}/img/vinci-logos.svg#woningfonds" width="250" height="80"></iframe>
 
 
     <h1 class="page-head__text">Vinci brengt de woningmarkt in beweging</h1>
@@ -24,35 +24,35 @@ priority: 1.0
   <section class="l-container">
     <article class="">
       <h3 class="sr-only">Stichting Huisvesting Middengroepen</h3>
-      <a class="" href="{{site.baseurl}}/stichting-huisvesting-middengroepen/">
-        <img class="" src="img/vinci-logos.svg#stichting" width="250" height="80" />
+      <a class="" href="{{ site.baseur l}}/stichting-huisvesting-middengroepen/">
+        <iframe class="" src="{{ site.baseurl }}/img/vinci-logos.svg#stichting" width="250" height="80"></iframe>
       </a>
       <p>
         Stichting Huisvesting Middengroepen is de woningstichting die beoogt heel Nederland te voorzien van voldoende en goede huurwoningen t.b.v. de middengroepen. Zij biedt een volkshuisvestelijk geborgde oplossing voor het marktsegment waar corporaties zich uit willen of moeten terugtrekken.
       </p>
-      <a class="btn btn--purple" href="{{site.baseurl}}/stichting-huisvesting-middengroep/">Lees verder</a>
+      <a class="btn btn--purple" href="{{ site.baseur l}}/stichting-huisvesting-middengroep/">Lees verder</a>
     </article>
 
     <article class="">
       <h3 class="sr-only">Vinci Woningfonds</h3>
-      <a class="" href="{{site.baseurl}}/woningfonds/">
-        <img class="" src="img/vinci-logos.svg#woningfonds" width="250" height="80" />
+      <a class="" href="{{ site.baseurl }}/woningfonds/">
+        <iframe class="" src="{{ site.baseurl }}/img/vinci-logos.svg#woningfonds" width="250" height="80"></iframe>
       </a>
       <p>
         Vinci Woningfonds is de uitvoeringsorganisatie van de stichting huisvesting middengroepen. Door gebruik te maken van een bekende en bewezen fondsstructuur wordt verbinding gemaakt met de private markt.
       </p>
-      <a class="btn btn--orange" href="{{site.baseurl}}/woningfonds/">Lees verder</a>
+      <a class="btn btn--orange" href="{{ site.baseurl }}/woningfonds/">Lees verder</a>
     </article>
 
     <article class="">
       <h3 class="sr-only">Vinci Koopgarantfonds</h3>
-      <a class="" href="{{site.baseurl}}/koopgarantfonds/">
-        <img class="" src="img/vinci-logos.svg#koopgarantfonds" width="250" height="80" />
+      <a class="" href="{{ site.baseurl }}/koopgarantfonds/">
+        <iframe class="" src="{{ site.baseurl }}/img/vinci-logos.svg#koopgarantfonds" width="250" height="80"></iframe>
       </a>
       <p>
         Vinci Koopgarantfonds biedt corporaties de mogelijkheid hun koopgarant positie op aantrekkelijke wijze te herstructureren of af te stoten.
       </p>
-      <a class="btn btn--orange" href="{{site.baseurl}}/koopgarantfonds/">Lees verder</a>
+      <a class="btn btn--orange" href="{{ site.baseur l}}/koopgarantfonds/">Lees verder</a>
     </article>
   </section>
 </main>
